wxc/include/ewxw/wxc_glue.h

TBool      wxTextCtrl_CanCopy( TSelf(wxTextCtrl) _obj );
TBool      wxTextCtrl_CanCut( TSelf(wxTextCtrl) _obj );
TBool      wxTextCtrl_CanPaste( TSelf(wxTextCtrl) _obj );
TBool      wxTextCtrl_CanRedo( TSelf(wxTextCtrl) _obj );
TBool      wxTextCtrl_CanUndo( TSelf(wxTextCtrl) _obj );
void       wxTextCtrl_Clear( TSelf(wxTextCtrl) _obj );
void       wxTextCtrl_Copy( TSelf(wxTextCtrl) _obj );
TClass(wxTextCtrl) wxTextCtrl_Create( TClass(wxWindow) _prt, int _id, TString _txt, TRect(_lft,_top,_wdt,_hgt), long _stl );
void       wxTextCtrl_Cut( TSelf(wxTextCtrl) _obj );
void       wxTextCtrl_DiscardEdits( TSelf(wxTextCtrl) _obj );
long       wxTextCtrl_GetInsertionPoint( TSelf(wxTextCtrl) _obj );
long       wxTextCtrl_GetLastPosition( TSelf(wxTextCtrl) _obj );
int        wxTextCtrl_GetLineLength( TSelf(wxTextCtrl) _obj, long lineNo );
TStringLen wxTextCtrl_GetLineText( TSelf(wxTextCtrl) _obj, long lineNo, TStringOutVoid _buf );
int        wxTextCtrl_GetNumberOfLines( TSelf(wxTextCtrl) _obj );
void       wxTextCtrl_GetSelection( TSelf(wxTextCtrl) _obj, void* from, void* to );
TStringLen wxTextCtrl_GetValue( TSelf(wxTextCtrl) _obj, TStringOutVoid _buf );
TBool      wxTextCtrl_IsEditable( TSelf(wxTextCtrl) _obj );
TBool      wxTextCtrl_IsModified( TSelf(wxTextCtrl) _obj );
int        wxTextCtrl_LoadFile( TSelf(wxTextCtrl) _obj, TString file );
void       wxTextCtrl_Paste( TSelf(wxTextCtrl) _obj );
int        wxTextCtrl_PositionToXY( TSelf(wxTextCtrl) _obj, long pos, long* x, long* y );
void       wxTextCtrl_Redo( TSelf(wxTextCtrl) _obj );
void       wxTextCtrl_Remove( TSelf(wxTextCtrl) _obj, long from, long to );
void       wxTextCtrl_Replace( TSelf(wxTextCtrl) _obj, long from, long to, TString value );
int        wxTextCtrl_SaveFile( TSelf(wxTextCtrl) _obj, TString file );
void       wxTextCtrl_SetEditable( TSelf(wxTextCtrl) _obj, TBool editable );
void       wxTextCtrl_SetInsertionPoint( TSelf(wxTextCtrl) _obj, long pos );
void       wxTextCtrl_SetInsertionPointEnd( TSelf(wxTextCtrl) _obj );
void       wxTextCtrl_SetSelection( TSelf(wxTextCtrl) _obj, long from, long to );
void       wxTextCtrl_SetValue( TSelf(wxTextCtrl) _obj, TString value );
void       wxTextCtrl_ShowPosition( TSelf(wxTextCtrl) _obj, long pos );
void       wxTextCtrl_Undo( TSelf(wxTextCtrl) _obj );
void       wxTextCtrl_WriteText( TSelf(wxTextCtrl) _obj, TString text );
long       wxTextCtrl_XYToPosition( TSelf(wxTextCtrl) _obj, TPointLong(x,y) );